# melonDS-android

./: .gitmodules  AGENTS.md  archived-optimizations.md  optimizations.md
app/: CMakeLists.txt  build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/java/me/magnum/melonds/debug/: EmulatorDebugReceiver.kt
app/src/main/cpp/: MelonDSAndroidJNI.cpp
app/src/main/java/me/magnum/melonds/: MelonEmulator.kt
common/: build.gradle.kts
docs/: architecture-next-steps-analysis.md  arm9-fastmem-bug-chase-removed-changes.md
rcheevos-api/: build.gradle.kts
tools/bench/: analyze_harness_scene.py  run_android_harness.sh  run_android_simpleperf.sh
